Complete Step 10: Alerting and Monitoring Setup
✅ Implemented comprehensive alerting infrastructure:
- Alertmanager configuration with GitHub webhook integration
- 8 Grafana alert rules covering critical scenarios
- Multi-channel notification system
- Alert webhook handler with GitHub issue management
- Structured escalation policies
- Enhanced dashboard with 4 new alert panels
- Comprehensive alert testing suite
- Complete operational runbook with alert procedures

🎯 All 8 validation checks passed
🚨 Production-ready alerting system with automatic issue management

--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -13,7 +13,7 @@ spec:
   project: default
   
   source:
-    repoURL: https://github.com/your-org/reddit-sentiment-pipeline
+    repoURL: https://github.com/YasCay/cicd_project
     targetRevision: HEAD
     path: helm/reddit-sentiment-pipeline
     helm:
