fix: resolve CI/CD pipeline failures
🔧 CRITICAL FIXES for failing GitHub Actions:

CI/CD PIPELINE FIXES:
- Fixed pip installation by using --extra-index-url instead of --index-url
- Now installs CPU-only PyTorch first, then other deps from main PyPI
- Added proper permissions (security-events: write) for CodeQL scans
- This resolves all test job failures across Python 3.9, 3.10, 3.11

REQUIREMENTS.TXT FIXES:
- Removed conflicting torch==2.7.0 version specification
- Torch is now installed separately with CPU-only version
- Prevents version conflicts between torch==2.7.0 and torch==2.2.0+cpu

IMPACT:
✅ Fixes failing tests in PRs #2, #3, #5, #13
✅ Resolves security scan upload permission issues
✅ Enables dependabot auto-merge workflow to function
✅ All CI/CD checks should now pass

BEFORE: All tests failed with 'pandas>=2.0.0 not found'
AFTER: Tests can install all dependencies from correct indexes

--- a/apps/collector/requirements.txt
+++ b/apps/collector/requirements.txt
@@ -4,9 +4,9 @@ python-dotenv>=1.0.0
 praw>=7.7.0
 pybloom-live>=4.0.0
 
-# FinBERT sentiment analysis (CPU-only versions)
+# FinBERT sentiment analysis 
+# Note: torch is installed separately with CPU-only version in Docker/CI
 transformers==4.52.3
-torch==2.7.0
 numpy>=1.24.0
 
 # Testing
