--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,11 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: read
+  security-events: write
+  actions: read
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
@@ -39,8 +44,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --index-url https://download.pytorch.org/whl/cpu \
-            -r apps/collector/requirements.txt
+          # Install CPU-only PyTorch first
+          pip install --extra-index-url https://download.pytorch.org/whl/cpu torch==2.2.0+cpu
+          # Install other dependencies from main PyPI
+          pip install -r apps/collector/requirements.txt
           pip install pytest pytest-cov pytest-mock coverage ruff black isort
 
       - name: Code quality checks
