--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,3 +44,7 @@ ignore = []
 [tool.ruff.lint.isort]
 force-single-line = false
 force-sort-within-sections = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+norecursedirs = ["archive", ".git", ".tox", "dist", "build", "*.egg"]
