--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           # Install CPU-only PyTorch first
-          pip install --extra-index-url https://download.pytorch.org/whl/cpu torch==2.5.1+cpu
+          pip install --extra-index-url https://download.pytorch.org/whl/cpu torch==2.3.1+cpu
           # Install other dependencies from main PyPI
           pip install -r apps/collector/requirements.txt
           pip install pytest pytest-cov pytest-mock coverage ruff black isort
@@ -165,12 +165,11 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          no-cache: true
 
       - name: Generate deployment artifact
         run: |
